--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "shelljs": "^0.8.5"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
